[gd_scene load_steps=12 format=3 uid="uid://c0wsl7i3w1i0p"]

[ext_resource type="Texture2D" uid="uid://ix7nu7ud6nks" path="res://graphics/icons/book.svg" id="1_ojgho"]
[ext_resource type="Script" path="res://scenes/subject_container.gd" id="1_x2uyx"]
[ext_resource type="PackedScene" uid="uid://c8q8numekxu7s" path="res://scenes/questions.tscn" id="2_mboog"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eut7x"]
bg_color = Color(0.2263, 0.335435, 0.73, 1)
skew = Vector2(0.3, 0)
border_width_right = 395
border_color = Color(0.198677, 0.288187, 0.673456, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pkcwq"]
bg_color = Color(0.2263, 0.67963, 0.73, 1)
skew = Vector2(0.3, 0)
border_width_right = 395
border_color = Color(0.198677, 0.288187, 0.673456, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r7lxy"]
bg_color = Color(0.2263, 0.335435, 0.73, 1)
skew = Vector2(0.3, 0)
border_width_right = 395
border_color = Color(0.198677, 0.288187, 0.673456, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a51ys"]
bg_color = Color(0.198, 0.290767, 0.44, 1)
skew = Vector2(0.3, 0)
border_width_right = 395
border_color = Color(0.1025, 0.158875, 0.41, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t8t30"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cfkyj"]
bg_color = Color(1, 1, 1, 1)
skew = Vector2(0.3, 0)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_upcla"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s71y3"]
bg_color = Color(0, 0.4, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="SubjectContainer" type="MarginContainer"]
theme_override_constants/margin_left = 35
theme_override_constants/margin_top = 10
script = ExtResource("1_x2uyx")
level = 1
questions_scene = ExtResource("2_mboog")

[node name="SubjectButton" type="Button" parent="."]
custom_minimum_size = Vector2(550, 75)
layout_mode = 2
mouse_filter = 1
theme_override_styles/focus = SubResource("StyleBoxFlat_eut7x")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_pkcwq")
theme_override_styles/hover = SubResource("StyleBoxFlat_r7lxy")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pkcwq")
theme_override_styles/normal = SubResource("StyleBoxFlat_a51ys")

[node name="TextureRect" type="TextureRect" parent="SubjectButton"]
modulate = Color(1, 1, 1, 0.109804)
layout_mode = 0
offset_left = 146.0
offset_top = 4.0
offset_right = 257.0
offset_bottom = 71.0
texture = ExtResource("1_ojgho")
expand_mode = 1

[node name="Name" type="Label" parent="SubjectButton"]
layout_mode = 0
offset_left = 82.0
offset_top = 9.0
offset_right = 486.0
offset_bottom = 45.0
mouse_filter = 1
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 23
text = "Name of the subject can be this long"
clip_text = true
text_overrun_behavior = 3

[node name="Level" type="Label" parent="SubjectButton"]
layout_mode = 0
offset_left = 83.0
offset_top = 39.0
offset_right = 125.0
offset_bottom = 61.0
mouse_filter = 1
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 15
text = "Lv. 100"

[node name="IDBox" type="Panel" parent="SubjectButton"]
layout_mode = 0
offset_left = 15.0
offset_top = 10.0
offset_right = 71.0
offset_bottom = 65.0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_t8t30")

[node name="ID" type="Label" parent="SubjectButton/IDBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_font_sizes/font_size = 20
text = "110"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AmountPanel" type="Panel" parent="SubjectButton"]
layout_mode = 0
offset_left = 417.0
offset_top = 50.0
offset_right = 527.0
offset_bottom = 90.0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_cfkyj")

[node name="Amount" type="Label" parent="SubjectButton/AmountPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 27
text = "99999"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Experience" type="ProgressBar" parent="SubjectButton"]
layout_mode = 0
offset_left = 139.0
offset_top = 48.0
offset_right = 411.0
offset_bottom = 54.0
mouse_filter = 1
theme_override_styles/background = SubResource("StyleBoxFlat_upcla")
theme_override_styles/fill = SubResource("StyleBoxFlat_s71y3")
value = 33.73
show_percentage = false

[connection signal="pressed" from="SubjectButton" to="." method="_on_subject_button_pressed"]
